...
                            <constraint firstItem="tFK-mB-qdW" firstAttribute="leading" secondItem="jmY-fJ-QPF" secondAttribute="leading" id="cjC-A2-hSa"/>
                            <constraint firstItem="tFK-mB-qdW" firstAttribute="top" secondItem="wWs-TK-3ky" secondAttribute="bottom" id="ezc-mj-Cre"/>
                            <constraint firstItem="Hha-HS-zB6" firstAttribute="top" secondItem="tFK-mB-qdW" secondAttribute="bottom" id="fDK-wM-iCK"/>
                            <constraint firstItem="hxD-6u-ejB" firstAttribute="top" secondItem="wWs-TK-3ky" secondAttribute="bottom" id="jp5-NL-LAV"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="배민웨이팅" id="CcG-0b-8AC">
                        <barButtonItem key="leftBarButtonItem" image="ticket" id="Ach-mU-evZ">
                            <connections>
                                <action selector="ticketShowBtnTapped:" destination="shz-0b-mnd" id="Wvc-jQ-BnG"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="map" id="PQr-jB-h3m">
...
